# MicroStrain_IMU

./: CMakeLists.txt  README.md
include/: microstrain_imu.h
src/: main.cpp  microstrain_imu.cpp
